--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1309,7 +1309,7 @@ jobs:
 
         python stage2_compiler.py compiler_native.py1 > compiler_native.py
 
-            # 29. Create "Compiler V0" (High-Level to Native IR) - Fixed Spec
+                # 29. Create "Compiler V0" (High-Level to Native IR) - Fixed Lib Logic
     - name: 29. Create Compiler V0
       run: |
         cat <<EOF > compiler_v0.py1
@@ -1325,9 +1325,9 @@ jobs:
         @v 読 'read'
         @v 始 'startswith'
         @v 終 'exit'
-        @v 実 'exec'
         @v 整 'int'
         @v 換 'replace'
+        @v 実 'exec'
 
         @v 系 'sys'
         @v 係 'argv'
@@ -1348,8 +1348,6 @@ jobs:
         @v 壱 '"R"+"B"+"X"'
         @v 弐 '"R"+"1"+"2"'
         @v 蓄 '"R"+"A"+"X"'
-        @v 繰 '"R"+"C"+"X"'
-        @v タ '"R"+"D"+"X"'
         
         # Opcodes
         @v 置 '"M"+"O"+"V"'
@@ -1366,42 +1364,52 @@ jobs:
         @v 値 'val'
         @v 函 'lib'
 
+        # Library Strings (Fixed Logic: Input in R12)
+        @v Ｌ１ '"LABEL print_int"'
+        @v Ｌ２ '"PUSH R12"'       # Save input value
+        @v Ｌ３ '"MOV R12 -11"'    # Set arg for GetStdHandle
+        @v Ｌ４ '"CALL GetStdHandle"'
+        @v Ｌ５ '"MOV RBX RAX"'    # RBX = Handle
+        @v Ｌ６ '"POP RAX"'        # RAX = Input value (Restored)
+        @v Ｌ７ '"MOV RCX 10"'     # Divisor
+        @v Ｌ８ '"MOV R12 0"'      # Digit Counter
+        @v Ｌ９ '"PUSH 0"'         # Sentinel? No, just alignment/dummy
+        @v ＬＡ '"LABEL L_DIV"'
+        @v ＬＢ '"DIV RCX"'
+        @v ＬＣ '"ADD RDX 48"'     # To ASCII
+        @v ＬＤ '"PUSH RDX"'
+        @v ＬＥ '"ADD R12 1"'
+        @v ＬＦ '"CMP RAX 0"'
+        @v ＬＧ '"JZ L_PRT"'
+        @v ＬＨ '"JMP L_DIV"'
+        @v ＬＩ '"LABEL L_PRT"'
+        @v ＬＪ '"MOV RCX RBX"'    # Handle
+        @v ＬＫ '"CMP R12 0"'
+        @v ＬＬ '"JZ L_END"'
+        @v ＬＭ '"POP RAX"'
+        @v ＬＮ '"MOV WRITE 500 RAX"'
+        @v ＬＯ '"LEA RDX 500"'
+        @v ＬＰ '"MOV R8 1"'
+        @v ＬＱ '"LEA R9 600"'
+        @v ＬＲ '"SETS 32 0"'
+        @v ＬＳ '"CALL WriteFile"'
+        @v ＬＴ '"ADD R12 -1"'
+        @v ＬＵ '"JMP L_PRT"'
+        @v ＬＶ '"LABEL L_END"'
+        @v ＬＷ '"RET"'
+
         $
         実(込)
         
-        # Build print_int library line by line to avoid parse errors
-        函 = ""
-        函 = 函 + "LABEL print_int" + 改
-        函 = 函 + "  MOV R12 -11" + 改
-        函 = 函 + "  CALL GetStdHandle" + 改
-        函 = 函 + "  MOV RBX RAX" + 改
-        函 = 函 + "  MOV RAX R12" + 改
-        函 = 函 + "  MOV RCX 10" + 改
-        函 = 函 + "  MOV R12 0" + 改
-        函 = 函 + "  PUSH 0" + 改
-        函 = 函 + "LABEL L_DIV" + 改
-        函 = 函 + "  DIV RCX" + 改
-        函 = 函 + "  ADD RDX 48" + 改
-        函 = 函 + "  PUSH RDX" + 改
-        函 = 函 + "  ADD R12 1" + 改
-        函 = 函 + "  CMP RAX 0" + 改
-        函 = 函 + "  JZ L_PRT" + 改
-        函 = 函 + "  JMP L_DIV" + 改
-        函 = 函 + "LABEL L_PRT" + 改
-        函 = 函 + "  MOV RCX RBX" + 改
-        函 = 函 + "  CMP R12 0" + 改
-        函 = 函 + "  JZ L_END" + 改
-        函 = 函 + "  POP RAX" + 改
-        函 = 函 + "  MOV WRITE 500 RAX" + 改
-        函 = 函 + "  LEA RDX 500" + 改
-        函 = 函 + "  MOV R8 1" + 改
-        函 = 函 + "  LEA R9 600" + 改
-        函 = 函 + "  SETS 32 0" + 改
-        函 = 函 + "  CALL WriteFile" + 改
-        函 = 函 + "  ADD R12 -1" + 改
-        函 = 函 + "  JMP L_PRT" + 改
-        函 = 函 + "LABEL L_END" + 改
-        函 = 函 + "  RET"
+        # Build library
+        函 = Ｌ１ + 改 + Ｌ２ + 改 + Ｌ３ + 改 + Ｌ４ + 改
+        函 = 函 + Ｌ５ + 改 + Ｌ６ + 改 + Ｌ７ + 改 + Ｌ８ + 改
+        函 = 函 + Ｌ９ + 改 + ＬＡ + 改 + ＬＢ + 改 + ＬＣ + 改
+        函 = 函 + ＬＤ + 改 + ＬＥ + 改 + ＬＦ + 改 + ＬＧ + 改
+        函 = 函 + ＬＨ + 改 + ＬＩ + 改 + ＬＪ + 改 + ＬＫ + 改
+        函 = 函 + ＬＬ + 改 + ＬＭ + 改 + ＬＮ + 改 + ＬＯ + 改
+        函 = 函 + ＬＰ + 改 + ＬＱ + 改 + ＬＲ + 改 + ＬＳ + 改
+        函 = 函 + ＬＴ + 改 + ＬＵ + 改 + ＬＶ + 改 + ＬＷ
 
         外 = 系.係
         径 = 外[1]
@@ -1409,8 +1417,8 @@ jobs:
         生 = 本.行()
         コ = []
 
-        # Header stuff
-        コ.追(置 + 空 + 弐 + 空 + 字(0)) # Init logic
+        # Init
+        コ.追(置 + 空 + 弐 + 空 + 字(0))
         
         順 = 0
         循 順 < 寸(生):
@@ -1420,29 +1428,28 @@ jobs:
          # Parse: print(123)
          も 線.始(命令):
           値 = 線.換(命令, 空).換(括弧, 空).換(閉じ, 空).削()
-          # Emit: MOV RAX, 123
-          コ.追(置 + 空 + 蓄 + 空 + 値)
-          # Emit: SAVE R12 (Used by print_int loop)
-          コ.追(置 + 空 + 弐 + 空 + 蓄) 
-          # Emit: CALL print_int
-          コ.追(呼 + 空 + 字(1)) # 1 is placeholder for "print_int" label string
+          # Pass arg in R12
+          コ.追(置 + 空 + 弐 + 空 + 値) 
+          # Call print_int
+          コ.追(呼 + 空 + 字(1))
          
          順 = 順 + 1
 
         # Emit Exit
         コ.追(置 + 空 + 繰 + 空 + 字(0))
-        コ.追(呼 + 空 + 字(2)) # 2 is ExitProcess
+        コ.追(呼 + 空 + 字(2))
 
-        # Replace placeholders and append Library
+        # Replace placeholders
         本 = 結(コ)
         本 = 本.換(字(1), "print_int")
         本 = 本.換(字(2), "ExitProcess")
         
         表(本)
-        表(函) # Append the print_int subroutine
+        表(函)
         EOF
 
         python stage2_compiler.py compiler_v0.py1 > compiler_v0.py
+
 
 
      # 30. Compile and Run High-Level Source
